--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -89,7 +89,7 @@
         .col-sm-12.col-md-8.col-md-offset-2
           p
             | When Tarek Pertew, father and member of the team, learned about the death of his
-            |  neighbors child (Karl) and his nanny's granddaughter (Keke), he reached out to a
+            |  neighbor's child, Karl, and his nanny's granddaughter, Keke, he reached out to a
             |  handful of friends about working on this project. Within minutes, nearly every
             |  person he reached out to jump right into helping make this project a reality.
 
