--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -130,7 +130,7 @@
             .member-company
         .col-sm-6.col-md-3
           .team-member
-            .member-photo.imgix-fluid.imgix-fluid-bg[data-src="#{ix_image_url(asset_path(''))}"]
+            .member-photo.imgix-fluid.imgix-fluid-bg[data-src="#{ix_image_url(asset_path('team/matt_star.jpg'))}"]
             .member-name Matthew Star
             .member-company WeWork
 
