grade F typo fix

--- a/app/views/application/_site_search.html.slim
+++ b/app/views/application/_site_search.html.slim
@@ -25,5 +25,5 @@ form.form-inline.kk-search[method="get" action="/daycare"]
           span.grade.grade-b B
         a.dropdown-item[href="/daycare/grade/C?q=#{@query}&nearby=#{@nearby}" data-filter='c']
           span.grade.grade-c C
-        a.dropdown-item[href="/daycare/grade/E?q=#{@query}&nearby=#{@nearby}" data-filter='f']
-          span.grade.grade-f E
+        a.dropdown-item[href="/daycare/grade/F?q=#{@query}&nearby=#{@nearby}" data-filter='f']
+          span.grade.grade-f F
