fix alex silverman's photo

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -125,7 +125,7 @@
             .member-company Uncubed
         .col-sm-6.col-md-3
           .team-member
-            .member-photo.imgix-fluid.imgix-fluid-bg[data-src="#{ix_image_url(asset_path(''))}"]
+            .member-photo.imgix-fluid.imgix-fluid-bg[data-src="#{ix_image_url(asset_path('team/alex_silverman.jpg'))}"]
             .member-name Alex Silverman
             .member-company
         .col-sm-6.col-md-3
