render masthead for the map view

--- a/app/views/daycare/map.html.slim
+++ b/app/views/daycare/map.html.slim
@@ -1,5 +1,5 @@
 = javascript_include_tag "daycare_map"
-
+= render "application/masthead"
 / <script>
 /   var daycares=[];
 /   // TODO: make this more efficient
